<resources>
    <string name="app_name">Қизил китоб</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="invertebrates">Умуртқасизлар</string>
    <string name="fishes">Балиқлар</string>
    <string name="reptiles">Судралиб юрувчилар</string>
    <string name="birds">Қушлар</string>
    <string name="mammals">Сут эмизувчилар</string>
    <string name="favorites">Танланганлар</string>
    <string name="author">Муаллиф</string>
    <string name="todo">TODO</string>
    <string name="share">Улашиш</string>
    <string name="status"><b>Мақоми:</b></string>
    <string name="propagation"><b>Тарқалиши:</b></string>
    <string name="habitat"><b>Яшаш жойлари:</b></string>
    <string name="quantity"><b>Сони:</b></string>
    <string name="lifestyle"><b>Яшаш тарзи:</b></string>
    <string name="limiting_factories"><b>Чекловчи омиллар:</b></string>
    <string name="increasing"><b>Кўпайтириш:</b></string>
    <string name="security"><b>Муҳофаза чоралари:</b></string>
    <string name="empty_favorites_text">Танланганлар рўйҳати бўш</string>
    <string name="uzbekistan_redbook">Ўзбекистон Республикаси қизил китоби</string>
    <string name="search_title">Излаш</string>
    <string name="not_found_message">бўйича натижа топилмади</string>
    <string name="about">Дастур ҳақида</string>
    <string name="ministry"><b>ЎЗБЕКИСТОН РЕСПУБЛИКАСИ АЛОҚА АХБОРАТЛАШТИРИШ ВА ТЕЛЕКОММУНИКАЦИЯ ТЕХНОЛОГИЯЛАРИ ДАВЛАТ ВАЗИРЛИГИ</b></string>
    <string name="university"><b>МУҲАММАД АЛЬ-ХОРАЗМИЙ НОМИДАГИ ТОШКЕНТ АХБОРОТ ТЕХНОЛОГИЯЛАРИ УНИВЕРСИТЕТИ</b></string>
    <string name="faculty">Компьютер Инжиниринг факультети 216-14 гуруҳ талабаси</string>
    <string name="name">Толибжонов Жаҳонгирнинг</string>
    <string name="app_theme_name">Android тизими учун \"Qizil kitob\" иловасини яратиш мавзусидаги битирув малакавий иши</string>
    <string name="email">tuit21714@gmail.com</string>
    <string name="tel_number">+998909459420</string>
    <string name="red_book">(Red Book)</string>
    <string name="support">Support</string>
    <string name="qizil_kitob">Mobil qizil kitob v1.0.0</string>
</resources>
