<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invertebrates"
            android:title="@string/invertebrates" />
        <item
            android:id="@+id/nav_fishes"
            android:title="@string/fishes" />
        <item
            android:id="@+id/nav_reptiles"
            android:title="@string/reptiles" />
        <item
            android:id="@+id/nav_birds"
            android:title="@string/birds" />
        <item
            android:id="@+id/nav_mammals"
            android:title="@string/mammals"/>
    </group>

    <group android:id="@+id/menu_buttom">
        <item
            android:id="@+id/nav_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_author"
            android:title="@string/author" />
    </group>
</menu>
