<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin"
    tools:context=".authors.AuthorsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ministry"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/university"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/faculty"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:gravity="center"
        android:text="@string/app_theme_name"
        android:textColor="@color/black"
        android:textSize="@dimen/standard_text_size" />


</LinearLayout>