<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".details.AnimalDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_toolbar_height">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_margin"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_name_text_size" />

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/detail_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_status_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_propagation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/propagation"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_propagation_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_habitat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/habitat"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_habitat_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_quantity_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/lifestyle"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_lifestyle_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_limiting_factories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/limiting_factories"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_limiting_factories_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_increasing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/increasing"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_increasing_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_sections_marin_top"
                android:text="@string/security"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

            <TextView
                android:id="@+id/detail_security_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/detail_text_size" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>